<resources>
    <string name="app_name">MedicalTests</string>
    <string name="status" />
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="create_account">create_account</string>
    <string name="sign_in">sign_in</string>
    <string name="EnterName">Введите ваше Имя</string>
    <string name="born_Date">Введите дату рождения</string>
    <string name="signOut_button">Выйти из аккаунта</string>
    <string name="activity_2">Activity 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medicaltests">MedicalTests</string>
    <string name="insert">войти</string>
    <string name="signup">регистрация</string>
    <string name="pol">выберите пол:</string>
    <string name="home">дом</string>
    <string name="my_tests">мои тесты</string>
    <string name="my_account">профиль</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="age">дата рождения</string>
    <string name="weight">ваш вес</string>
    <string name="sex">выберите пол:</string>
    <string name="m">M</string>
    <string name="w">Ж</string>
    <string name="name">name</string>
    <string name="man">мужской</string>
    <string name="save_change">сохранить изменения</string>
    <string name="insert_email">введите почтовый адрес для восстановления пароля</string>
</resources>
